--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ body {
 .toggle-all {
 	width: 1px;
 	height: 1px;
-	border: none; /* Mobile Safari */
+	border: none; 
 	opacity: 0;
 	position: absolute;
 	right: 100%;
@@ -179,13 +179,12 @@ body {
 .todo-list li .toggle {
 	text-align: center;
 	width: 40px;
-	/* auto, since non-WebKit browsers doesn't support input styling */
 	height: auto;
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	margin: auto 0;
-	border: none; /* Mobile Safari */
+	border: none;
 	-webkit-appearance: none;
 	appearance: none;
 }
@@ -195,10 +194,6 @@ body {
 }
 
 .todo-list li .toggle + label {
-	/*
-		Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
-		IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
-	*/
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
 	background-repeat: no-repeat;
 	background-position: center left;
@@ -308,7 +303,7 @@ body {
 	text-decoration: none;
 	border: 1px solid transparent;
 	border-radius: 3px;
-	cursor: pointer; /* Because of Mavo: we don't use the href attribute in such situations */
+	cursor: pointer; 
 }
 
 .filters li a:hover {
@@ -354,10 +349,6 @@ html .clear-completed:active {
 	text-decoration: underline;
 }
 
-/*
-	Hack to remove background from Mobile Safari.
-	Can't use it globally since it destroys checkboxes in Firefox
-*/
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	.toggle-all,
 	.todo-list li .toggle {
@@ -377,47 +368,4 @@ html .clear-completed:active {
 	.filters {
 		bottom: 10px;
 	}
-}
-
-/* Mavo */
-
-[property]:hover,
-[mv-app] [mv-mode="edit"] .mv-editor {
-	box-shadow: none !important;
-}
-
-[mv-app] [mv-mode="edit"] .mv-editor {
-	width: 100% !important;
-}
-
-[property="todo"]:focus-within {
-	border-bottom: 0;
-}
-
-[property="todo"] label:focus-within {
-	padding: 0;
-	margin: 0;
-	background-image: none !important;
-}
-
-[property="todo"].completed label:focus-within {
-	color: #4d4d4d;
-	text-decoration: none;
-}
-
-[mv-app] [mv-mode="edit"] .mv-editor:focus {
-	width: calc(100% - 78px) !important;
-	padding: 14px 16px !important;
-	margin: 0 0 0 43px !important;
-	border: 1px solid #999 !important; 
-	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2) !important;
-}
-
-.mv-item-bar,
-.mv-ui.mv-message,
-button.mv-add,
-meta,
-[property="todo"] .view:focus-within .toggle,
-[property="todo"] .view:focus-within button {
-	display: none !important;
 }
